# codecompass-haskell-plugin

./: ChangeLog.md  README.md  codecompass.cabal
Development/CodeCompass/: Representation.hs  Schema.hs
Development/CodeCompass/Parser/: Names.hs  Plugin.hs  Utils.hs
db-init/: Main.hs
postgres-init/: Main.hs
service-experiment/: CHANGELOG.md  HaskellService.hs  HaskellServiceTest.hs  LICENSE  thrift-haskell-test.cabal
