
name:                codecompass
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              nboldi
maintainer:          nboldi@elte.hu
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable codecompass-sqlite-init
  main-is: Main.hs
  hs-source-dirs: db-init
  build-depends:
      base >=4.12 && <4.13
    , directory
    , text
    , persistent
    , persistent-sqlite
    , persistent-template
    , codecompass
  default-language:    Haskell2010

executable codecompass-postgresql-init
  main-is: Main.hs
  hs-source-dirs: postgres-init
  build-depends:
      base >=4.12 && <4.13
    , bytestring
    , directory
    , text
    , persistent
    , persistent-postgresql
    , persistent-template
    , codecompass
    , resourcet
    , monad-logger
  default-language:    Haskell2010

library
  exposed-modules:
    Development.CodeCompass.Parser.Plugin
    Development.CodeCompass.Parser.Names
    Development.CodeCompass.Parser.Utils
    Development.CodeCompass.Schema

  other-modules:
    Development.CodeCompass.Representation

  build-depends:
      base >=4.12 && <4.13
    , ghc < 8.7
    , uniplate
    , persistent
    , persistent-sqlite
    , persistent-postgresql
    , persistent-template
    , monad-logger
    , text
    , mtl
    , conduit
    , unliftio-core
    , containers
    , lens
    , exceptions
    , bytestring
    , terminfo <= 0.4.1.2
    , timeit
    , time
    , directory

  ghc-options: -Wunused-imports

  -- Directories containing source files.
  -- hs-source-dirs: src

  -- Base language which the package is written in.
  default-language:    Haskell2010

